@@ -1,3 +1,10 @@
+Version 27     Live Server Fixes
+
+--Added support for cash coupon redemption, in preparation for Humble Bundle.
+
+
+
+
 Version 27     2015-June-19
 
 --Fixed CANNOT JOIN message for tournaments when you can't afford it
